add kotlin code database in Employee Data and Add Employee

--- a/app/src/main/res/layout/card_data_pegawai.xml
+++ b/app/src/main/res/layout/card_data_pegawai.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:padding="5dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCARD_PEGAWAI"
         android:layout_width="match_parent"
-        android:layout_height="245dp"
-        android:layout_marginTop="15dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         app:cardCornerRadius="15dp"
@@ -23,14 +24,14 @@
             <TextView
                 android:id="@+id/tvIdPegawai"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="33dp"
                 android:text="@string/card_pegawai_id"
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
                 android:background="#7181C5"
                 android:textColor="#fff"
                 android:textStyle="bold"
-                android:padding="8dp"/>
+                android:padding="5dp" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,7 +40,7 @@
                 android:text="@string/card_pegawai_nama"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins"
                 />
@@ -47,45 +48,45 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvAlamat"
+                android:id="@+id/tvAlamatPegawai"
                 android:textColor="@color/blackwhite"
-                android:text="@string/card_pelanggan_alamat"
+                android:text="@string/card_pegawai_alamat"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvNohp"
-                android:text="@string/card_pelanggan_nohp"
+                android:id="@+id/tvNoHpPegawai"
+                android:text="@string/card_pegawai_nohp"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvTerdaftar"
-                android:text="@string/card_pelanggan_terdaftar"
+                android:id="@+id/tvTerdaftar_pegawai"
+                android:text="@string/card_pegawai_terdaftar"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/tvCabang"
+                android:id="@+id/tvCabang_pegawai"
                 android:text="@string/card_cabang"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <LinearLayout
@@ -95,24 +96,25 @@
                 <Button
                     android:layout_width="180dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bHubungi"
-                    android:text="@string/card_pelanggan_bhubungi"
+                    android:id="@+id/bHubungi_pegawai"
+                    android:text="@string/card_pegawai_bhubungi"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#185CB4"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="20dp"
                     android:textColor="@color/white"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_marginEnd="5dp"
+                    android:layout_marginBottom="5dp"/>
 
                 <Button
-                    android:layout_width="180dp"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bLihat"
-                    android:text="@string/card_pelanggan_blihat"
+                    android:id="@+id/bLihat_pegawai"
+                    android:text="@string/card_pegawai_blihat"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#54DED7"
                     android:textColor="@color/white"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="20dp"/>
             </LinearLayout>
         </LinearLayout>
 
