--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -42,7 +42,7 @@
         android:fontFamily="@font/poppins"
         android:paddingStart="10dp"
         android:textColorHint="#bbbbbb"
-        android:id="@+id/etNama"
+        android:id="@+id/etNamaPegawai"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -60,7 +60,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNama"/>
+        app:layout_constraintTop_toBottomOf="@id/etNamaPegawai"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -121,7 +121,7 @@
         android:layout_height="48dp"
         android:hint="@string/card_cabang"
         android:fontFamily="@font/poppins"
-        android:id="@+id/etJabatan"
+        android:id="@+id/etNamaCabangPegawai"
         android:paddingStart="10dp"
         android:textColorHint="#bbbbbb"
         android:background="@drawable/border_editor"
@@ -133,62 +133,63 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvAlamat"
-        android:text="@string/card_pelanggan_alamat"
+        android:id="@+id/tvAlamatPegawai"
+        android:text="@string/card_pegawai_alamat"
         android:fontFamily="@font/poppins"
         android:textColor="@color/blackwhite"
         android:textSize="16sp"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etJabatan"/>
+        app:layout_constraintTop_toBottomOf="@id/etNamaCabangPegawai"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="@string/card_pelanggan_alamat"
+        android:hint="@string/card_pegawai_alamat"
         android:fontFamily="@font/poppins"
         android:textColorHint="#bbbbbb"
-        android:id="@+id/etAlamat"
+        android:id="@+id/etAlamatPegawai"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvAlamat"/>
+        app:layout_constraintTop_toBottomOf="@id/tvAlamatPegawai"/>
 
     <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:id="@+id/tvNohp"
-    android:text="@string/card_pelanggan_nohp"
+    android:id="@+id/tvNohpPegawai"
+    android:text="@string/card_pegawai_nohp"
     android:fontFamily="@font/poppins"
         android:textColor="@color/blackwhite"
     android:textSize="16sp"
     android:layout_marginTop="10dp"
     android:layout_marginStart="10dp"
     app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toBottomOf="@id/etAlamat"/>
+    app:layout_constraintTop_toBottomOf="@id/etAlamatPegawai"/>
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="@string/card_pelanggan_nohp"
+        android:hint="@string/card_pegawai_nohp"
         android:fontFamily="@font/poppins"
         android:textColorHint="#bbbbbb"
-        android:id="@+id/etNohp"
+        android:id="@+id/etNohpPegawai"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvNohp"/>
+        app:layout_constraintTop_toBottomOf="@id/tvNohpPegawai"/>
 
 
     <Button
         android:layout_width="300dp"
         android:layout_height="55dp"
         android:text="@string/bsimpan"
+        android:id="@+id/bSimpan"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="20dp"
@@ -196,7 +197,7 @@
         android:fontFamily="@font/poppins_bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNohp"/>
+        app:layout_constraintTop_toBottomOf="@id/etNohpPegawai"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
