add kotlin code in Service Data and Add Service

--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTambahLayanan"
-        android:text="Tambah Layanan"
+        android:text="@string/card_tambah_layanan"
         android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins_bold"
         android:textSize="22sp"
@@ -79,8 +79,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvKeterangan"
-        android:text="Keterangan"
+        android:id="@+id/tvHargaLayanan"
+        android:text="@string/card_harga_layanan"
         android:fontFamily="@font/poppins"
         android:textColor="@color/blackwhite"
         android:textSize="16sp"
@@ -92,93 +92,21 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="Keterangan Layanan"
+        android:hint="@string/card_harga_layanan"
         android:fontFamily="@font/poppins"
-        android:id="@+id/etKeterangan"
+        android:id="@+id/etHargaLayanan"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:textColorHint="#bbbbbb"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvKeterangan"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvHargaLayanan"
-        android:text="Harga Layanan"
-        android:fontFamily="@font/poppins_bold"
-        android:textColor="@color/blackwhite"
-        android:textSize="18sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etKeterangan"
-        />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Kiloan"
-        android:textSize="16sp"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/blackwhite"
-        android:id="@+id/tvKiloan"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="20dp"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvHargaLayanan"/>
-
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:hint="Harga per Kilo"
-        android:fontFamily="@font/poppins"
-        android:id="@+id/etDeskripsiLayanan"
-        android:paddingStart="10dp"
-        android:background="@drawable/border_editor"
-        android:textColorHint="#bbbbbb"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvHargaLayanan"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Satuan"
-        android:textSize="16sp"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/blackwhite"
-        android:id="@+id/tvSatuan"
-        android:layout_marginStart="15dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="25dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvKiloan"/>
-
-    <EditText
-        android:layout_width="300dp"
-        android:layout_height="48dp"
-        android:hint="Harga per Satuan"
-        android:fontFamily="@font/poppins"
-        android:id="@+id/etHargaSatuan"
-        android:paddingStart="10dp"
-        android:background="@drawable/border_editor"
-        android:textColorHint="#bbbbbb"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etDeskripsiLayanan"/>
 
     <Button
         android:layout_width="300dp"
         android:layout_height="55dp"
+        android:id="@+id/bSimpan"
         android:text="@string/bsimpan"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -186,7 +114,7 @@
         android:backgroundTint="@color/button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etHargaSatuan"/>
+        app:layout_constraintTop_toBottomOf="@id/etHargaLayanan"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
