--- a/app/src/main/res/layout/activity_tambah_cabang.xml
+++ b/app/src/main/res/layout/activity_tambah_cabang.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvTambahCabang"
-        android:text="Tambah Cabang"
+        android:text="@string/tvTambahCabang"
         android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins_bold"
         android:textSize="22sp"
@@ -53,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvAlamatCabang"
-        android:text="Alamat Cabang"
+        android:text="@string/tvAlamatCabang"
         android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins"
         android:textSize="16sp"
@@ -65,7 +65,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="Alamat Cabang"
+        android:hint="@string/tvAlamatCabang"
         android:fontFamily="@font/poppins"
         android:id="@+id/etAlamatCabang"
         android:textColorHint="#bbbbbb"
@@ -80,7 +80,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvNohpCabang"
-        android:text="No HP Cabang"
+        android:text="@string/tvNoHpCabang"
         android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins"
         android:textSize="16sp"
@@ -92,7 +92,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="No HP Cabang"
+        android:hint="@string/tvNoHpCabang"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNohpCabang"
         android:textColorHint="#bbbbbb"
@@ -107,7 +107,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/tvManagerCabang"
-        android:text="Manager Cabang"
+        android:text="@string/tvManagerCabang"
         android:textColor="@color/blackwhite"
         android:fontFamily="@font/poppins"
         android:textSize="16sp"
@@ -119,7 +119,7 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="Manager Cabang"
+        android:hint="@string/tvManagerCabang"
         android:fontFamily="@font/poppins"
         android:id="@+id/etManagerCabang"
         android:paddingStart="10dp"
