add customer options, services and additional service activities and kotlin along with transactions to confirm payment data

--- a/app/src/main/res/drawable/top_bg.xml
+++ b/app/src/main/res/drawable/top_bg.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <gradient android:startColor="#2980b9" android:centerColor="#6dd5fa" android:endColor="#ffffff" android:angle="98"/>
+            <gradient android:startColor="#1576E5" android:centerColor="#62A3EE" android:endColor="#D5E6F9" android:angle="98"/>
             <corners android:bottomLeftRadius="30dp" android:bottomRightRadius="30dp"/>"/>
         </shape>
     </item>
