--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="blackwhite">#FF000000</color>
     <color name="button">#185CB4</color>
     <color name="bgtambahactivity">#F1F2F4</color>
+    <color name="bgtransparant">#A6DADDF4</color>"
 </resources>
