--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -41,7 +41,7 @@
         android:layout_width="235dp"
         android:layout_height="280dp"
         android:layout_marginTop="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="10dp"
         app:cardCornerRadius="25dp"
         app:layout_constraintTop_toBottomOf="@id/selamat"
         app:layout_constraintStart_toStartOf="parent">
@@ -170,11 +170,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivTransaksi"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/transaksi" />
 
                 <TextView
+                    android:id="@+id/tvTransaksi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -208,11 +210,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivLayanan"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/layanan" />
 
                 <TextView
+                    android:id="@+id/tvLayanan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -247,11 +251,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivTambahan"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/tambahan" />
 
                 <TextView
+                    android:id="@+id/tvTambahan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -285,11 +291,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivPelanggan"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/pelanggan" />
 
                 <TextView
+                    android:id="@+id/tvPelanggan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -323,11 +331,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivLaporan"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/laporan" />
 
                 <TextView
+                    android:id="@+id/tvLaporan"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -361,11 +371,13 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/ivPrint"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
                     android:src="@drawable/print" />
 
                 <TextView
+                    android:id="@+id/tvPrint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
