--- a/app/src/main/res/layout/activity_data_cabang.xml
+++ b/app/src/main/res/layout/activity_data_cabang.xml
@@ -12,23 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/rvDATA_CABANG"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/fabTambahCabang"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         tools:listitem="@layout/card_data_cabang"
         />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_add_24"
             android:id="@+id/fabTambahCabang"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_margin="16dp"
             android:contentDescription="Tambah Cabang"
             />
-    </RelativeLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
