--- a/app/src/main/res/layout/activity_tambah_layanan.xml
+++ b/app/src/main/res/layout/activity_tambah_layanan.xml
@@ -52,8 +52,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvCabangLayanan"
-        android:text="@string/tv_cabang"
+        android:id="@+id/tvHargaLayanan"
+        android:text="@string/card_harga_layanan"
         android:fontFamily="@font/poppins"
         android:textColor="@color/blackwhite"
         android:textSize="16sp"
@@ -65,22 +65,23 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="@string/tv_cabang"
+        android:hint="@string/card_harga_layanan"
         android:fontFamily="@font/poppins"
         android:textColorHint="#bbbbbb"
         android:id="@+id/etCabangLayanan"
         android:paddingStart="10dp"
+        android:inputType="number"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvCabangLayanan"/>
+        app:layout_constraintTop_toBottomOf="@id/tvHargaLayanan"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvHargaLayanan"
-        android:text="@string/card_harga_layanan"
+        android:id="@+id/tvCabangLayanan"
+        android:text="@string/tv_cabang"
         android:fontFamily="@font/poppins"
         android:textColor="@color/blackwhite"
         android:textSize="16sp"
@@ -92,7 +93,8 @@
     <EditText
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="@string/card_harga_layanan"
+        android:hint="@string/tv_cabang"
+
         android:fontFamily="@font/poppins"
         android:id="@+id/etHargaLayanan"
         android:paddingStart="10dp"
@@ -101,7 +103,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvHargaLayanan"/>
+        app:layout_constraintTop_toBottomOf="@id/tvCabangLayanan"/>
 
     <Button
         android:layout_width="300dp"
