--- a/app/src/main/res/layout/activity_tambah_pegawai.xml
+++ b/app/src/main/res/layout/activity_tambah_pegawai.xml
@@ -52,60 +52,6 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tvJK"
-        android:text="@string/card_pegawai_jeniskelamin"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/blackwhite"
-        android:textSize="16sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etNamaPegawai"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:hint="@string/card_pegawai_jeniskelamin"
-        android:fontFamily="@font/poppins"
-        android:textColorHint="#bbbbbb"
-        android:paddingStart="10dp"
-        android:id="@+id/etJK"
-        android:background="@drawable/border_editor"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvJK"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/tvTTL"
-        android:text="@string/card_pegawai_ttl"
-        android:fontFamily="@font/poppins"
-        android:textColor="@color/blackwhite"
-        android:textSize="16sp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="10dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etJK"/>
-
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:hint="@string/card_pegawai_ttl"
-        android:fontFamily="@font/poppins"
-        android:paddingStart="10dp"
-        android:id="@+id/etTTL"
-        android:background="@drawable/border_editor"
-        android:textColorHint="#bbbbbb"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvTTL"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:id="@+id/tvCabang"
         android:text="@string/card_cabang"
         android:fontFamily="@font/poppins"
@@ -114,7 +60,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/etTTL"/>
+        app:layout_constraintTop_toBottomOf="@id/etNamaPegawai"/>
 
     <EditText
         android:layout_width="match_parent"
@@ -176,12 +122,14 @@
         android:hint="@string/card_pegawai_nohp"
         android:fontFamily="@font/poppins"
         android:textColorHint="#bbbbbb"
+        android:inputType="phone"
         android:id="@+id/etNohpPegawai"
         android:paddingStart="10dp"
         android:background="@drawable/border_editor"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginTop="5dp"
+        android:maxLength="13"
         app:layout_constraintTop_toBottomOf="@id/tvNohpPegawai"/>
 
 
