--- a/app/src/main/res/layout/card_data_tambahan.xml
+++ b/app/src/main/res/layout/card_data_tambahan.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:padding="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cvCARD_TAMBAHAN"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
@@ -21,9 +22,9 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
             <TextView
-                android:id="@+id/tvIdPelanggan"
+                android:id="@+id/tvIdTambahan"
                 android:layout_width="match_parent"
-                android:layout_height="38dp"
+                android:layout_height="33dp"
                 android:text="ID Tambahan"
                 android:fontFamily="@font/poppins_bold"
                 android:textSize="16sp"
@@ -39,7 +40,7 @@
                 android:text="@string/card_tambahan_namalayanan"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/poppins"
                 />
@@ -51,8 +52,8 @@
                 android:textColor="@color/blackwhite"
                 android:text="@string/card_tambahan_harga"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <TextView
@@ -62,8 +63,8 @@
                 android:text="@string/card_tambahan_namacabang"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <TextView
@@ -73,35 +74,38 @@
                 android:text="@string/card_tambahan_status"
                 android:textColor="@color/blackwhite"
                 android:textSize="16sp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="0dp"
                 android:fontFamily="@font/poppins"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <Button
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:id="@+id/bHubungi"
-                    android:text="Edit"
+                    android:id="@+id/bEdit"
+                    android:text="Edit"  
                     android:textColor="@color/white"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#185CB4"
-                    android:layout_marginStart="8dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginBottom="5dp"
                     android:layout_marginEnd="5dp"/>
 
                 <Button
-                    android:layout_width="180dp"
+                    android:layout_width="0dp"
+                    android:layout_weight="1"
                     android:layout_height="wrap_content"
                     android:id="@+id/bLihat"
                     android:text="@string/card_pelanggan_blihat"
                     android:textColor="@color/white"
                     android:fontFamily="@font/poppins_bold"
                     android:backgroundTint="#54DED7"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="5dp"/>
+                    android:layout_marginStart="5dp"
+                    android:layout_marginEnd="20dp"/>
             </LinearLayout>
         </LinearLayout>
 
