updated the login and registration pages to add a password confirmation pop up for registration security.

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -110,6 +110,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="@string/nama"
+        android:maxLength="25"
         android:textColorHint="#bbbbbb"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNama"
@@ -137,6 +138,7 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:hint="@string/nomortelepon"
+        android:maxLength="13"
         android:textColorHint="#bbbbbb"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNohp"
@@ -177,6 +179,7 @@
                     android:inputType="textPassword"
                     android:fontFamily="@font/poppins"
                     android:paddingStart="10dp"
+                    android:maxLength="20"
                     android:textColor="@color/black"
                     android:textColorHint="#bbbbbb"
                     android:background="@drawable/border_editor" />
