--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,6 +97,7 @@
         android:hint="@string/nomortelepon"
         android:textColorHint="#bbbbbb"
         android:inputType="phone"
+        android:maxLength="13"
         android:fontFamily="@font/poppins"
         android:id="@+id/etNohp"
         android:textColor="@color/black"
@@ -135,6 +136,7 @@
             android:inputType="textPassword"
             android:fontFamily="@font/poppins"
             android:paddingStart="10dp"
+            android:maxLength="20"
             android:textColor="@color/black"
             android:textColorHint="#bbbbbb"
             android:background="@drawable/border_editor" />
